<resources>
    <string name="app_name">TestApp</string>

    <string name="total_sensor">Number of total sensor : %d</string>
    <string name="info_sensor">\n\n %d. Sensor Name: %s \n Sensor Power: %f \n Resolution: %f \n MaxRange: %f</string>

    <string name="name">Name</string>
    <string name="price">Price</string>

    <string name="et_name">Name : </string>
    <string name="et_price">Price : </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>

    <string name="data_list">Data List</string>
    <string name="add_data">Add Data</string>
    <string name="save_data">Save Data</string>

    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="shared_preference">Shared Preference</string>
    <string name="sql_lite">SQL Lite</string>
    <string name="room">Room</string>

    <string name="hint">Hint</string>
    <string name="please_wait">Please wait…</string>

    <string name="not_saved">Failed saving data</string>

    <string-array name="save_type_array">
        <item>@string/internal_storage</item>
        <item>@string/external_storage</item>
        <item>@string/shared_preference</item>
        <item>@string/sql_lite</item>
        <item>@string/room</item>
    </string-array>
</resources>
